module_12/virtualserver.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test-http
  namespace: test-service
spec:
  gateways:
    - gateway
  hosts:
    - test.com
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: test-http.test-services.svc.cluster.local
            port:
              number: 80
